code test coverage update

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -36,4 +36,9 @@ jobs:
           coverageLocations: ${{github.workspace}}/coverage.xml:coverage.py
         env:
           CC_TEST_REPORTER_ID: 1b341d53a4f3575b5ff8a83756f5dabd904b6f9667380482d277cc0e590f1c07
+      - name: Upload coverage to code climate
+        env:
+          CODECLIMATE_REPO_TOKEN: 1b341d53a4f3575b5ff8a83756f5dabd904b6f9667380482d277cc0e590f1c07
+        run: |
+          codeclimate-test-reporter
       
