--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,13 @@
         "-s",
         ".",
         "-p",
-        "*_test.py"
+        "*_test.py",
+        "*.py"
     ],
     "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.unittestEnabled": true,
+
+      "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true,
+      },
 }
